--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap-accessibility-plugin</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.4-SNAPSHOT</version>
     <name>bootstrap-accessibility-plugin</name>
     <description>WebJar for bootstrap-accessibility-plugin</description>
     <url>http://webjars.org</url>
@@ -32,9 +32,9 @@
     </licenses>
 
     <scm>
-        <url>http://github.com/hygl/bootstrap-accessibility-plugin</url>
-        <connection>scm:git:https://github.com/hygl/bootstrap-accessibility-plugin.git</connection>
-        <developerConnection>scm:git:https://github.com/hygl/bootstrap-accessibility-plugin.git</developerConnection>
+        <url>http://github.com/webjars/bootstrap-accessibility-plugin</url>
+        <connection>scm:git:https://github.com/webjars/bootstrap-accessibility-plugin.git</connection>
+        <developerConnection>scm:git:https://github.com/webjars/bootstrap-accessibility-plugin.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
@@ -99,13 +99,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.5.1</version>
             </plugin>
 
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.5.1</version>
+                <version>1.6.5</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>sonatype-nexus-staging</serverId>
