--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap-accessibility-plugin</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4</version>
     <name>bootstrap-accessibility-plugin</name>
     <description>WebJar for bootstrap-accessibility-plugin</description>
     <url>http://webjars.org</url>
@@ -35,7 +35,7 @@
         <url>http://github.com/webjars/bootstrap-accessibility-plugin</url>
         <connection>scm:git:https://github.com/webjars/bootstrap-accessibility-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/bootstrap-accessibility-plugin.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>bootstrap-accessibility-plugin-1.0.4</tag>
     </scm>
 
     <dependencies>
